--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,9 @@
 version: 2
 updates:
 - package-ecosystem: npm
-  target_branch: dependencies
+  target-branch: dependencies
   directory: "/"
   schedule:
       interval: "daily"
       time: "09:00"
   open-pull-requests-limit: 10
-  automerged_updates: yes
